--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ button {
 }
 
 input[type="color"] {
-  -webkit-apperance: none;
+  -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
   background-color: transparent;
@@ -54,6 +54,10 @@ input[type="color"] {
   height: 40px;
   border: none;
   cursor: pointer;
+}
+input[type="color"]::-webkit-color-swatch {
+  border-radius: 8px;
+  border: 4px solid #000;
 }
 
 input[type="color"]::-moz-color-swatch {
